<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/newsSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            android:layout_toStartOf="@id/newsImage"
            android:fontFamily="@font/helvetica_neue_condensed_obl"
            android:textStyle="bold"
            android:textSize="16sp"
            tools:text="@string/news_source" />

        <TextView
            android:id="@+id/newsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newsSource"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            android:layout_toStartOf="@id/newsImage"
            android:ellipsize="end"
            android:fontFamily="@font/helvetica_neue_condensed_obl"
            android:lineSpacingExtra="10dp"
            android:maxLines="3"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="@string/news_title" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/newsImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/image"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"/>


    </RelativeLayout>
</androidx.cardview.widget.CardView>